# Diffalump

./: .gitignore  README.md  license.txt  main.py  prompt.md  prompt.txt  pyproject.toml
tests/: input.txt  output.txt  output_001.txt  output_002.txt  output_003.txt  test_main.py
